--- a/html-css-kadai_013/index.html
+++ b/html-css-kadai_013/index.html
@@ -21,11 +21,14 @@
                         <a href="index.html#product">PRODUCT</a>
                         <a href="index.html#contact">CONTACT</a>
                     </nav>
+
                         <!-- スマホ用メニューボタン -->
                             <img id="menu-sp" onclick="document.getElementById('nav-sp').style.display = 'block'" src="images/button-menu.png" alt="ナビゲーションを開く">
                          <!-- スマホ用ナビゲーション -->
+                    <div id="nav-sp">
                             <img id="close" onclick="document.getElementById('nav-sp').style.display = 'none'" src="images/button-close.png" alt="ナビゲーションを閉じる">
-                            <nav id="nav-sp">
+                            
+                            <nav>
                                 <ul>
                                     <li>
                                         <a id="logo-sp" href="index.html" onclick="document.getElementById('nav-sp').style.display = 'none'"><img src="images/logo-sp.png" alt="トップページに戻る"></a>
@@ -35,6 +38,7 @@
                                     <li><a class="menu" href="index.html#contact" onclick="document.getElementById('nav-sp').style.display = 'none'">CONTACT</a></li>
                                 </ul>
                             </nav>
+                    </div>
              </header>
              <main>
                 <article>
